Update Docker build

--- a/app/package.json
+++ b/app/package.json
@@ -4,9 +4,12 @@
   "description": "Elm client development environment",
   "license": "BSD3",
   "scripts": {
-    "install-app": "npm i && ./node_modules/.bin/elm-package install -y",
-    "build": "./node_modules/.bin/elm-make src/Main.elm --output=assets/app.js",
-    "start": "./node_modules/.bin/elm-live src/Main.elm --output=assets/app.js --pushstate --open"
+    "install-elm": "npm i -g elm --unsafe-perm=true --allow-root",
+    "install-packages": "npm i && /usr/local/bin/elm-package install -y",
+    "install-app": "npm run install-elm && npm run install-packages",
+    "build": "/usr/local/bin/elm-make ./src/Main.elm --output=./assets/app.js",
+    "start-elm-live": "./node_modules/.bin/elm-live --path-to-elm-make=/usr/local/bin/elm-make ./src/Main.elm --output=./assets/app.js --pushstate",
+    "start": "npm run install-app && npm run build && npm run start-elm-live"
   },
   "author": "Christian Lohr<christian.lohr@gmail.com>",
   "devDependencies": {
