--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -4,8 +4,7 @@ WORKDIR /usr/src/app
 
 COPY ./package.json ./
 
-RUN npm run install-app
+RUN tree /usr/src/app/node_modules
+RUN which elm
 
 COPY . .
-
-CMD ["npm", "start"]
