--- a/app/package.json
+++ b/app/package.json
@@ -7,16 +7,20 @@
     "install-elm": "npm i -g elm --unsafe-perm=true --allow-root",
     "install-packages": "npm i && /usr/local/bin/elm-package install -y",
     "install-app": "npm run install-elm && npm run install-packages",
-    "build": "/usr/local/bin/elm-make ./src/Main.elm --output=./assets/app.js",
-    "start-elm-live": "./node_modules/.bin/elm-live --path-to-elm-make=/usr/local/bin/elm-make ./src/Main.elm --output=./assets/app.js --pushstate",
-    "start": "npm run install-app && npm run build && npm run start-elm-live"
+    "build": "/usr/local/bin/elm-make ./src/Main.elm --output=./public/app.js",
+    "start-server": "nodemon --watch public --ext elm server.js",
+    "start": "npm run install-app && npm run build && npm run start-server"
   },
   "author": "Christian Lohr<christian.lohr@gmail.com>",
   "devDependencies": {
-    "elm-live": "^2.7.5",
-    "json-server": "^0.12.1"
+    "json-server": "^0.12.1",
+    "nodemon": "^1.14.11"
   },
   "dependencies": {
-    "elm": "^0.18.0"
+    "elm": "^0.18.0",
+    "express": "^4.1.2",
+    "body-parser": "^1.1.2",
+    "errorhandler": "^1.0.1",
+    "method-override": "^1.0.0"
   }
 }
